fix cta alignment

--- a/src/components/Cta/Cta.module.scss
+++ b/src/components/Cta/Cta.module.scss
@@ -6,14 +6,14 @@
     background-image: url('../../assets/cake-cta.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center 40%;
+    background-position: center 50%;
     background-attachment: fixed;
     position: relative;
     .whiteOverlay {
         width: 100%;
         height: 100%;
         background-color: $white;
-        opacity: 20%;
+        opacity: 45%;
         position: absolute;
     }
 }
@@ -22,10 +22,39 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 2;
     h2 {
+        width: 100%;
+        max-width: 584px;
+        margin: auto;
+        font-size: clamp(2rem, 2.5vw, 2.5rem);
+        font-weight: 500;
         text-align: center;
     }
 }
+.formWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color: $white;
+}
 .ctaForm {
-    margin: auto;
+    width: 80%;
+    margin: 20px;
+    input {
+        width: 100%;
+        border: none;
+        background-color: $white;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+    button {
+        width: 100%;
+        color: $white;
+        font-size: clamp(0.85rem, 2.5vw, 1.25rem);
+        font-weight: 600;
+        background-color: $red;
+        border: none;
+        padding: 10px;
+    }
 }
